# SFML_graphic

./: .gitignore  CMakeLists.txt
include/: button.h
src/: button.cpp  main.cpp
